# mobius

./: .gitignore  README.md  demo_token_tracking.py  pyproject.toml  test_chaos_engine.py  人与ai的爱恋故事.md  存档点-暗黑版.md  存档点.md
demo_output/: metadata.json
docs/: ARCHITECTURE.md  CODE_REVIEW_PERF_AND_RESILIENCE.md  USAGE_SPEC.md  V21_CHAOS_ENGINE.md
output/ai_love_story/: full_novel.md  metadata.json
output/ai_love_story/chapters/: chapter_001.md  chapter_002.md  chapter_003.md  chapter_004.md  chapter_005.md  chapter_006.md  chapter_007.md  chapter_008.md  chapter_009.md  chapter_010.md
output/ai_love_story/events/: chapter_001_desires.json  chapter_001_events.json  chapter_002_desires.json  chapter_002_events.json  chapter_003_desires.json  chapter_003_events.json  chapter_004_desires.json  chapter_004_events.json  chapter_005_desires.json  chapter_005_events.json  chapter_006_desires.json  chapter_006_events.json  chapter_007_desires.json  chapter_007_events.json  chapter_008_desires.json  chapter_008_events.json  chapter_009_desires.json  chapter_009_events.json  chapter_010_desires.json  chapter_010_events.json
output/ai_love_story/memory/: chapter_001_memory.json  chapter_002_memory.json  chapter_003_memory.json  chapter_004_memory.json  chapter_005_memory.json  chapter_006_memory.json  chapter_007_memory.json  chapter_008_memory.json  (+2 more)
output/test_token/: metadata.json
output/test_token_final/: metadata.json
output/test_v21/: metadata.json
presets/: ai_love_story.yaml  her_echo.yaml  test_token_tracking.yaml
src/mobius/: __init__.py  main.py
(+86 files in other folders)
