[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobius"
version = "0.1.0"
description = "AI-powered novel creation multi-agent system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
mobius = "mobius.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mobius"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
